[tool.poetry]
name = "kiva-pipeline"
version = "0.1.0"
description = ""
authors = ["jjuanramos <jjuanramos91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
flake8 = "^3.9.1"
black = "^20.8b1"
isort = "^5.8.0"
safety = "^1.10.3"
bandit = "^1.7.0"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
